--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -12,24 +12,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: gradle
+      - name: Set up JDK 17
+      - uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x android/gradlew
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
 
-    - name: Build with Gradle
-      working-directory: ./android
-      run: ./gradlew assembleDebug --stacktrace
+      - name: Install Android components (SDK/NDK/CMake)
+        run: |
+          sdkmanager --install \
+            "platform-tools" \
+            "platforms;android-34" \
+            "build-tools;34.0.0" \
+            "ndk;25.2.9519653" \
+            "cmake;3.22.1"
 
-    - name: Upload Debug APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: sub-verse-debug
-        path: android/app/build/outputs/apk/debug/app-debug.apk
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Build Debug APK
+        run: gradle -p android :app:assembleDebug --stacktrace
+
+      - name: Upload Debug APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: sub-verse-debug
+          path: android/app/build/outputs/apk/debug/app-debug.apk
