--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android' version '1.9.0'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -12,27 +12,37 @@ android {
         minSdk 26
         targetSdk 34
         versionCode 1
-        versionName "1.0"
+        versionName "0.1.0"
+
+        ndkVersion "25.2.9519653"
 
         externalNativeBuild {
             cmake {
-                cppFlags "-std=c++17"
+                cppFlags "-std=c++17 -Wall -Wextra"
             }
         }
     }
 
     externalNativeBuild {
         cmake {
+            // Use the C++ core engine CMake
             path file('../../engine/CMakeLists.txt')
             version '3.22.1'
         }
     }
 
-    buildFeatures {
-        viewBinding true
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
-    
-    packagingOptions {
+
+    buildFeatures {
+        viewBinding false
+    }
+
+    packaging {
         jniLibs {
             keepDebugSymbols += ['**/*.so']
         }
@@ -42,6 +52,4 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
