--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up JDK 17
-      - uses: actions/setup-java@v4
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Install Android components (SDK/NDK/CMake)
+      - name: Install Android components
         run: |
           sdkmanager --install \
             "platform-tools" \
