Complete Visual Novel Engine: Asset system, sprite renderer, dialogue system, story script

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,10 +1,19 @@
 cmake_minimum_required(VERSION 3.18.0)
 project("subverse-engine")
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 add_library(subverse-engine SHARED
     src/jni_entry.cpp
     src/engine.cpp
     src/renderer_gles3.cpp
+    src/asset_manager.cpp
+    src/texture.cpp
+    src/sprite_renderer.cpp
+    src/dialogue_system.cpp
+    src/story_manager.cpp
+    src/input_manager.cpp
 )
 
 target_include_directories(subverse-engine PRIVATE
