Fix invalid Gradle comment syntax in root build.gradle

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-# Root Gradle build for SUB-verse Chronicles (Android wrapper)
+// Root Gradle build for SUB-verse Chronicles (Android wrapper)
 
 plugins {
     id 'com.android.application' version '8.2.2' apply false
