--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -35,10 +35,13 @@ jobs:
 
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v4
+        with:
+          gradle-version: '8.5'
 
       - name: Build Debug APK
-        run: gradle -p android :app:assembleDebug --stacktrace
-
+        working-directory: ./android
+        run: gradle :app:assembleDebug --stacktrace --warning-mode all
+        
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
