--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,5 +1,6 @@
-cmake_minimum_required(VERSION 3.18.0)
-project("subverse-engine")
+cmake_minimum_required(VERSION 3.22.1)
+
+project(subverse-engine)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -9,23 +10,22 @@ add_library(subverse-engine SHARED
     src/engine.cpp
     src/renderer_gles3.cpp
     src/asset_manager.cpp
-    src/texture.cpp
     src/sprite_renderer.cpp
     src/dialogue_system.cpp
     src/story_manager.cpp
     src/input_manager.cpp
+    src/texture.cpp
+    src/image_loader.cpp
 )
 
 target_include_directories(subverse-engine PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    include
+    ${ANDROID_NDK}/sources/android/native_app_glue
 )
 
-find_library(log-lib log)
-find_library(android-lib android)
-find_library(gles3-lib GLESv3)
-
 target_link_libraries(subverse-engine
-    ${log-lib}
-    ${android-lib}
-    ${gles3-lib}
+    android
+    log
+    GLESv3
+    EGL
 )
